# JIIT-placement-alerts

./: .gitignore  README.md  app.py  main.py  pyproject.toml  test.py  user_guide.md
.archieve/: requirements.txt
.archieve/modules/: __init__.py  config.py  database.py  formatting.py  webscraping.py
.archieve/scripts/: daemon_manager.py
.archieve/v1/scripts/: test_link_extraction.py
.archieve/v2/.dev_scripts/: dedup_jobs.py  test_timezone.py
.archieve/v2/.github/workflows/: daily-run.yml
.archieve/v2/app/: .gitignore  main.py  placement_stats.py  requirements.txt  telegram_handeller.py
.archieve/v2/app/.dev_scripts/: add_sent_to_notices.py  structured_notices.py  update_all_documents.py  verify_placement_merge.py
.github/workflows/: daily-run.yml  deploy.yaml  noon-run.yml  noon-run.yml.legacy
app/: README.md  add_sent_to_notices.py  bot_server.py  database.py  docker-compose.dev.yaml  llm_formater.py  main.py  notice_formater.py  official_placement.py  placement_stats.py  pyproject.toml  requirements.txt  scrapper.py  telegram_handeller.py  update.py
app/.dev_scripts/: enrich_locations.py  formated_notices.py  migration_notices.py  placement_stats_backup.py  test_documents.py
app/clients/: __init__.py  db_client.py  superset_client.py  telegram_client.py
app/core/: __init__.py  config.py  daemon.py  database.py
app/modules/: database.py  telegram.py
app/runners/: __init__.py  notification_runner.py  update_runner.py
app/scripts/: convert_image_base64.py  structured_jobs.py
app/servers/: __init__.py  bot_server.py  notification_runner.py  scheduler_server.py  update_runner.py  webhook_server.py
app/services/: __init__.py  admin_telegram_service.py  database_service.py  email_notice_service.py  formatter.py  google_groups_client.py  notice_formatter_service.py  notification_service.py  official_placement_service.py  placement_notification_formatter.py  placement_policy_service.py  placement_service.py  placement_stats_calculator_service.py  scraper.py  superset_client.py  telegram_bot.py  telegram_service.py  updater.py  web_push_service.py
app/services/placement/: official.py  stats.py
modules/: database.py  db_manager.py  formatting.py  telegram.py  test_workflow.py  webscraping.py
scripts/: db_manager.py  manage_users.py  test_exact_matching.py  test_mongodb.py  test_setup.py
