[project]
name = "superset-telegram-notification-bot"
version = "0.1.0"
description = "A bot to send notification of placement activity in superset via telegram bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.0",
    "requests>=2.32.0",
    "pymongo>=4.10.1",
    "python-telegram-bot>=21.0.0",
    "schedule>=1.2.0",
    "pytz>=2024.1",
]
